--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: windows-latest #windows-2019 #ubuntu-18.04
+    runs-on: ubuntu-latest #ubuntu-18.04 #windows-latest #windows-2019 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
