--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,5 +26,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           #deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           #personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          #publish_dir: ./public
+          publish_dir: ./public
           #publish_branch: master  # default: gh-pages
